--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datarsource.url = jdbc:mysql://localhost:3306/products
+spring.datasource.username = root
+spring.datasource.password = Elgoog@123
+spring.jpa.hibernate.ddl-auto = update
